--- a/package.json
+++ b/package.json
@@ -75,6 +75,10 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "fastclick": "^1.0.6",
+    "flex.css": "^1.1.6",
+    "reset-css": "^2.2.0",
+    "vue": "^2.3.3",
+    "vue-router": "^2.5.3"
   }
 }
